I-56 Starting update the data, fix minor layout issue when filling data

--- a/src/components/PlaceGallery/placegallery.css
+++ b/src/components/PlaceGallery/placegallery.css
@@ -6,7 +6,7 @@
 }
 
 .images img {
-  height: calc(33vh - 20px);
+  height: calc(35vh - 20px);
   padding: 10px;
 }
 
